--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    //Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
