--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,17 @@
 
         <activity
             android:name=".activity.maps.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".activity.NavigationActivity">
-        </activity>
-        <activity android:name=".activity.CadastroActivity" />
-        <activity android:name=".activity.LoginActivity">
+            android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.NavigationActivity">
+        </activity>
+        <activity android:name=".activity.CadastroActivity" />
+        <activity android:name=".activity.LoginActivity">
+
         </activity>
         <activity android:name=".activity.Update"></activity>
 
